--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coronaProject",
   "version": "1.0.0",
-  "main": "index.js",
+  "node": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
